fix wrap issue of flexbox in ie

--- a/resources/assets/sass/common.sass
+++ b/resources/assets/sass/common.sass
@@ -272,6 +272,12 @@ section
 
 //---
 
+.flex_column_fix
+  // width: 100%
+  height: 100%
+  display: flex
+  flex-direction: column
+
 .container
   max-width: grid_sz(12,13)
   margin: auto
@@ -281,8 +287,11 @@ section
 
   &.flex
     display: flex
+    flex: 1 1 0%
+    min-width: 0
     flex-direction: row
     align-items: center
+
 
     +range_width(0px,800px)
       height: auto
@@ -294,7 +303,7 @@ section
     flex-wrap: wrap
 
   &.full
-    max-width: initial
+    max-width: 5000px
 
   &.column
     flex-direction: column
@@ -320,10 +329,14 @@ section
     padding: grid_sz(0,1)
     text-align: center
     height: 100%
+    flex: 1
+    align-items: 'stretch'
     +flex_center
     flex-direction: column
-    p
+    // max-width: 100%
+    &>*
       text-align: left
+      max-width: 100%
 
   +rwd_sm
     box-sizing: border-box
